# carai

./: .gitignore  .release-it.ts  .releaserc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  next.config.mjs  package.json  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.base.json
auth/: .env.example  Cargo.toml
auth/scripts/: init_db.sh  startup.sh
auth/src/: error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
server/: .env.example  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
server/.sqlx/: query-00a3d00ec02d774597ccdb745c80b13965080af409c20232fc2c706f57058fdd.json  query-0ae51c14fdd1e2aabb5781260b606324e677696c63e120def9b5419f02c9aa11.json  query-2116f39861c2bef3e0370b9ad40621904cf6307a663e19149fd76cac6d6aa2ba.json  query-21caf1d1f1cea55ef6a6b7c78f9e9a79e7c90e4d1b0ef72fb5f97a445f5ba9d4.json  query-2e58883232a61d72d9966b6a42213d7bb0f61207247f82f01bfb838712248a58.json  query-44f0ac242e42fe53c0803714b6d1da8bc889033ec5208c01e3c73f03acf95f42.json  query-56493bbb8d0a395462c8af1638cfe07369ced2ef62a5ac895c79ee3554afd0dc.json  query-5ac944d8b54614e26e5327b6296643d49d06eebc045fbf4070353adb79a4cc3b.json  query-5f4700655780427d0872d6e5d0017537a6ab99989b316749e01e68d2a8689a4e.json  query-6db770653bc1807295bb53f3813d517c8ccb6696c6a28c40d7cf3d1a2aea2215.json  query-7eb5ae2544f52de9fcffe5f90202f4ad40a262e9b2e6ce9a994207bece290ae9.json  query-7f4e56d4e5c79498e2de08a38b59f337b7b130076c3b68a5db46e2bde2f88df5.json  query-87c8830345549a7a0c925bbdf4a237c472f0262b08b8b7b00cfc7e260bcd6343.json  query-93620e8de94e62c91bb41fcbb4fa57e884d6086d4d8ace61898c8f74414d6b2a.json  query-a2f3e04bd624677cec93f04fae8ebc8dfc5149f057eb30725c13bbd80bfd87e2.json  query-b8f0e3e17421a6a4748f5a8217ec336cc3c44e5ddb8dafedbb4dbfde353a3e94.json  query-b9d168e2b857922bdfe7aa8e1e422935950fec764664d2350f31286a740a1fdc.json  query-bcec8e05707f02d1948891b54e8f028b4fc68602cc724d2501841485d22d67cf.json  query-cc8b8ed498f1776401eceff261114d79851ee462b1a490b11cf57d27c875bdc7.json  query-dec08b134d97b614b15194edf7a20bf64be29f09180473d8451677100c05c8a0.json  query-e151dfc9c1cad7131bc0c1ff4bcd9173a05ea514fd79f6d622692c093dc70d72.json  query-e3f40d6bbaf2d517daefc81eebdd6d8b667b246f505ff6441d038536ce6ee071.json  query-e71070c7e61f50df601d3d2cf837e8560ff6e8727fd7ed60342986d89196260d.json  query-e977935abd39104af6e8c08260ed279ea56c634be130661af0aa090117736549.json
server/migrations/: 20241207011743_user.sql  20241213184059_add_users_table.down.sql  20241213184059_add_users_table.up.sql  20241213191033_add_sessions_table.down.sql  20241213191033_add_sessions_table.up.sql
server/src/: bootstrap.rs  (+6 more)
(+419 files in other folders)
