[package]
name = "carai"
version = "0.1.0"
rust-version = "1.83"
edition = "2021"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
description = """ 
Backend service for Carai
"""
license = "MIT"
homepage = "https://github.com/xosnrdev/carai"
repository = "https://github.com/xosnrdev/carai"

[[bin]]
name = "carai"

[dependencies]
anyhow = "1.0.94"
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["tracing"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "serde",
] }
config = "0.14.1"
derive_more = { version = "1.0.0", features = ["from", "try_from", "display"] }
dotenv = "0.15.0"
getset = "0.1.3"
jsonwebtoken = "9.3.0"
redis = "0.27.5"
serde = { version = "1.0.210", features = ["derive"] }
smart-default = "0.7.1"
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
